# oraculum

./: .gitignore  AGENTS.md  README.md  TUTORIAL.md  capture_admissibility.py  capture_log.py  capture_provenance.py  capture_store.py  capture_subprocess.py  cli.py  engine_b.py  example_exception_oracle.py  fuzzy_oracle.py  golden_admissibility.py  golden_fixtures.py  golden_kappa.py  golden_prds.py  kappa.py  llm_adapter.py  oracle_taxonomy.py  pyproject.toml  readiness_gate.py  recall_oracle.py  recall_runner.py  report.py  run_capture_demo.py  run_demo.py  run_engine_b_demo.py  run_fuzzy_demo.py  run_tamper_eval.py  scaffold.py  verdict_engine.py
.github/workflows/: capture-golden.yml  oraculum.yml.example  pages.yml
fuzzy_data/: fuzzy_golds.json  meeting_notes.md
landing/: README.md  index.html
recall_data/: candidates.json  recall_golds.json
